Finish coding at 7:11pm 12/3/2024 -> Debug phase