@@ -1,5 +1,6 @@
 package Menu;
 
+import Other.Category;
 import Other.Utils;
 import User.Customer;
 import User.Seller;
@@ -18,20 +19,21 @@ public class SellerMenu {
     public void displayAuthMenu(){
         String choice;
         while(true){
+            Utils.clearScreen();
             System.out.println("------------ Seller ------------");
             System.out.println("(1) Register");
             System.out.println("(2) Login");
             System.out.println("(3) Exit");
             choice = scan.next();
-            if(choice == "1"){
+            if(choice.equalsIgnoreCase("1")){
                 displayRegisterMenu();
                 return;
             }
-            if(choice == "2"){
+            if(choice.equalsIgnoreCase("2")){
                 displayLoginMenu();
                 return;
             }
-            if(choice == "3"){
+            if(choice.equalsIgnoreCase("3")){
                 return;
             }
         }
@@ -42,7 +44,7 @@ public class SellerMenu {
         String ID = Utils.generateID();
         String name = "";
         String password = "";
-        while(name.length()==0){
+        while(name.isEmpty()){
             System.out.println("------------ Register -------------");
             System.out.println("ID:       "+ID);
             System.out.println("Name: ------------");
@@ -51,7 +53,7 @@ public class SellerMenu {
             System.out.println("-----------------------------------");
             name = scan.next();
         }
-        while(password.length()==0){
+        while(password.isEmpty()){
             Utils.clearScreen();
             System.out.println("------------ Register -------------");
             System.out.println("ID:       "+ID);
@@ -102,19 +104,24 @@ public class SellerMenu {
         while(true){
             System.out.println("---------- Seller Menu ----------");
             System.out.println("(1) Shop");
-            System.out.println("(2) Information");
-            System.out.println("(3) Log out");
+            System.out.println("(2) Create new shop");
+            System.out.println("(3) Information");
+            System.out.println("(4) Log out");
             System.out.println("-----------------------------------");
             choice = scan.next();
-            if(choice == "1"){
+            if(choice.equalsIgnoreCase("1")){
                 displayAllShopMenu();
                 return;
             }
-            if(choice == "2"){
+            if(choice.equalsIgnoreCase("2")){
+                displayNewShopMenu();
+                return;
+            }
+            if(choice.equalsIgnoreCase("3")){
                 displayInformationMenu();
                 return;
             }
-            if(choice == "3"){
+            if(choice.equalsIgnoreCase("4")){
                 Utils.writeSellerFile(activeSeller);
                 activeSeller = null;
                 displayAuthMenu();
@@ -128,8 +135,8 @@ public class SellerMenu {
         String choice;
         ArrayList<String> shopID = activeSeller.getShops();
         ArrayList<Shop> sellerShop = new ArrayList<>();
-        for(int i = 0; i<shopID.size(); i++){
-            Shop shop = Utils.readShopFile(shopID.get(i));
+        for (String s : shopID) {
+            Shop shop = Utils.readShopFile(s);
             sellerShop.add(shop);
         }
         Shop selectedShop = null;
@@ -162,20 +169,30 @@ public class SellerMenu {
         String choice;
         while(true){
             System.out.println("----- "+shop.getName()+" "+shop.getID()+" ----------");
-            System.out.println("(1) View product");
-            System.out.println("(3) View bills");
-            System.out.println("(4) Exit");
+            System.out.println("(1) Product");
+            System.out.println("(2) Bills");
+            System.out.println("(3) Balance");
+            System.out.println("(4) Delete shop");
+            System.out.println("(5) Exit");
             System.out.println("--------------------------");
             choice = scan.next();
-            if(choice == "1"){
+            if(choice.equalsIgnoreCase("1")){
                 displayProductMenu(shop);
                 return;
             }
-            if(choice == "2"){
+            if(choice.equalsIgnoreCase("2")){
                 displayBillMenu(shop);
                 return;
             }
-            if(choice == "3"){
+            if(choice.equalsIgnoreCase("3")){
+                displayShopBalance(shop);
+                return;
+            }
+            if(choice.equalsIgnoreCase("4")){
+                displayDeleteShopMenu(shop);
+                return;
+            }
+            if(choice.equalsIgnoreCase("5")){
                 displayAllShopMenu();
                 return;
             }
@@ -199,19 +216,19 @@ public class SellerMenu {
             System.out.println("(4) Exit");
             System.out.println("------------------------------");
             choice = scan.next();
-            if(choice == "1"){
+            if(choice.equalsIgnoreCase("1")){
                 buyProductMenu(shop);
                 return;
             }
-            if(choice == "2"){
+            if(choice.equalsIgnoreCase("2")){
                 createProductMenu(shop);
                 return;
             }
-            if(choice == "3"){
+            if(choice.equalsIgnoreCase("3")){
                 removeProductMenu(shop);
                 return;
             }
-            if(choice == "4"){
+            if(choice.equalsIgnoreCase("4")){
                 displayShopMenu(shop);
                 return;
             }
@@ -233,7 +250,7 @@ public class SellerMenu {
                 System.out.println("Enter product: ");
                 choice = scan.next();
                 foundProducts = Utils.findProduct(choice);
-                Shop foundShop = Utils.readShopFile(foundProducts.get(0).getShopID());
+                Shop foundShop = Utils.readShopFile(foundProducts.getFirst().getShopID());
                 foundCategory = Utils.enumToString(foundShop.getCategory());
             }
 
@@ -316,7 +333,7 @@ public class SellerMenu {
             System.out.println("----------- <Input Name> -----------");
             name = scan.next();
         }
-        while(price.isEmpty() || Utils.isDouble(price)){
+        while(price.isEmpty() || !Utils.isDouble(price)){
             Utils.clearScreen();
             System.out.println("---------- Create Product ----------");
             System.out.println(" Category: " + Utils.enumToString(shop.getCategory()));
@@ -327,7 +344,7 @@ public class SellerMenu {
             System.out.println("----------- <Input Price> ----------");
             price = scan.next();
         }
-        while(amount.isEmpty() || Utils.isInteger(amount)){
+        while(amount.isEmpty() || !Utils.isInteger(amount)){
             Utils.clearScreen();
             System.out.println("---------- Create Product ----------");
             System.out.println(" Category: " + Utils.enumToString(shop.getCategory()));
@@ -354,18 +371,256 @@ public class SellerMenu {
     }
 
     public void removeProductMenu(Shop shop){
-        Utils.clearScreen();
         String choice;
-
+        Map<String, Integer> goods = shop.getGoods();
+        while(true) {
+            Utils.clearScreen();
+            System.out.println("---------- Remove Product ----------");
+            int index = 1;
+            for (Map.Entry<String, Integer> entry : goods.entrySet()) {
+                Product product = Utils.readProductFile(entry.getKey());
+                int amount = entry.getValue();
+                System.out.println("(" + index + ") " + product + " - Amount: " + amount);
+                index++;
+            }
+            System.out.println("(0) Exit");
+            System.out.println("Choose product to remove: ");
+            int selection = scan.nextInt();
+            if (selection == 0) {
+                break;
+            }
+            else if(selection>0&&selection<=goods.size()){
+                String productID = (String) goods.keySet().toArray()[selection-1];
+                if(Utils.deleteFile(productID)) {
+                    goods.remove(productID);
+                    System.out.println("Delete product successfully!");
+                }
+                else{
+                    System.out.println("Delete product failed");
+                }
+            }
+            else{
+                System.out.println("Invalid choice!");
+            }
+        }
+        choice = scan.next();
+        displayProductMenu(shop);
     }
 
-
-
     public void displayBillMenu(Shop shop){
+        Utils.clearScreen();
+        String choice;
+        ArrayList<String> billID = shop.getBills();
+        ArrayList<Bill> bills = new ArrayList<>();
+        for(String id: billID){
+            Bill bill = Utils.readBillFile(id);
+            bills.add(bill);
+        }
+        System.out.println("------------- Bill ------------");
+        for(Bill bill: bills){
+            System.out.println(bill);
+            System.out.println("Purchased by: "+bill.printPurchased());
+        }
+        System.out.println("--- <Press any key to exit> ---");
+        choice = scan.next();
+        displayShopMenu(shop);
+    }
 
+    public void displayShopBalance(Shop shop){
+        String choice;
+        while(true){
+            Utils.clearScreen();
+            System.out.println("---------- "+shop.getName()+" Balance ----------");
+            System.out.println("Balance: "+shop.getBalance());
+            System.out.println("(1) Withdraw money");
+            System.out.println("(2) Deposit money");
+            System.out.println("(3) Exit");
+            choice = scan.next();
+            if(choice.equalsIgnoreCase("1")){
+                displayWithDrawMenu(shop);
+                return;
+            }
+            if(choice.equalsIgnoreCase("2")){
+                displayDepositMenu(shop);
+                return;
+            }
+            if(choice.equalsIgnoreCase("3")){
+                displayShopMenu(shop);
+            }
+        }
+    }
+
+    public void displayWithDrawMenu(Shop shop){
+        Utils.clearScreen();
+        String value = "";
+        double amount;
+        while(value.isEmpty() || !Utils.isDouble(value)){
+            System.out.println("----- Withdraw from shop -----");
+            System.out.println("--- Balance: "+shop.getBalance());
+            System.out.println("--- Withdraw: ----------------");
+            System.out.println("------------------------------");
+            value = scan.next();
+        }
+        amount = Double.parseDouble(value);
+        if(!shop.hasMoney(amount)){
+            Utils.clearScreen();
+            System.out.println("----- Withdraw from shop -----");
+            System.out.println("--- Balance: "+shop.getBalance());
+            System.out.println("--- Withdraw: <Invalid amount>");
+            System.out.println("------------------------------");
+            System.out.println("--- Press any key to exit ----");
+        }
+        else{
+            shop.subtractMoney(amount);
+            Utils.clearScreen();
+            System.out.println("----- Withdraw from shop -----");
+            System.out.println("--- Balance: "+shop.getBalance());
+            System.out.println("--- Withdraw: "+amount);
+            System.out.println("--- <Deposit successfully> ---");
+            System.out.println("--- Press any key to exit ----");
+        }
+        value = scan.next();
+        displayShopBalance(shop);
+    }
+
+    public void displayDepositMenu(Shop shop){
+        Utils.clearScreen();
+        String value = "";
+        double amount = -1;
+        while(value.isEmpty() || !Utils.isDouble(value)){
+            System.out.println("------- Deposit to Shop ------");
+            System.out.println("--- Balance: "+shop.getBalance());
+            System.out.println("--- Deposit: -----------------");
+            System.out.println("------------------------------");
+            value = scan.next();
+        }
+        amount = Double.parseDouble(value);
+        if(amount<0){
+            Utils.clearScreen();
+            System.out.println("------- Deposit to Shop ------");
+            System.out.println("--- Shop balance: "+shop.getBalance());
+            System.out.println("--- Deposit: <Invalid amount>-");
+            System.out.println("------------------------------");
+            System.out.println("--- Press any key to exit ----");
+        }
+        else{
+            this.activeSeller.subtractMoney(amount);
+            shop.addMoney(amount);
+            System.out.println("------- Deposit to Shop ------");
+            System.out.println("--- Shop balance: "+shop.getBalance());
+            System.out.println("--- Deposit: "+amount);
+            System.out.println("--- <Deposit successfully> ---");
+            System.out.println("--- Press any key to exit ----");
+        }
+        value = scan.next();
+        displayShopBalance(shop);
+    }
+
+    public void displayDeleteShopMenu(Shop shop){
+        String choice;
+        System.out.println("------------- Shop -------------");
+        System.out.println("Name: "+shop.getName());
+        System.out.println("ID: "+shop.getID());
+        System.out.println("Category: "+shop.getCategory());
+        System.out.println("Do you want to delete shop? (Y/N)");
+        choice = scan.next();
+        if(choice.equalsIgnoreCase("y")){
+            activeSeller.deleteShop(shop.getID());
+            activeSeller.addMoney(shop.getBalance());
+            Utils.deleteFile(shop.getID());
+            System.out.println("------------- Shop -------------");
+            System.out.println("--- Delete shop successfully! --");
+            System.out.println("---- <Press any key to exit> ---");
+        }
+        else if(choice.equalsIgnoreCase("n")){
+            System.out.println("---- <Press any key to exit> ---");
+        }
+        else{
+            System.out.println("------- <Invalid choice> -------");
+            System.out.println("---- <Press any key to exit> ---");
+        }
+        choice = scan.next();
+        displayAllShopMenu();
+    }
+
+    public void displayNewShopMenu(){
+        String ID = Utils.generateID();
+        String name = "";
+        String category = "";
+        Category shopCategory = Category.NONE;
+        String choice = "";
+        while(choice.isEmpty()){
+            Utils.clearScreen();
+            System.out.println("-------- Choose category --------");
+            System.out.println("(1) Sports");
+            System.out.println("(2) Electronics");
+            System.out.println("(3) Clothes");
+            System.out.println("(4) Foods");
+            choice = scan.next();
+            if(choice.equalsIgnoreCase("1")){
+                shopCategory =  Category.SPORTS;
+                category = "Sports";
+            }
+            if(choice.equalsIgnoreCase("2")){
+                shopCategory =  Category.ELECTRONICS;
+                category = "Electronics";
+            }
+            if(choice.equalsIgnoreCase("3")){
+                shopCategory =  Category.CLOTHES;
+                category = "Clothes";
+            }
+            if(choice.equalsIgnoreCase("4")){
+                shopCategory =  Category.FOODS;
+                category = "Foods";
+            }
+        }
+        while(name.isEmpty()) {
+            Utils.clearScreen();
+            System.out.println("---------- Create Shop ----------");
+            System.out.println(" Category: " + category);
+            System.out.println(" Name:   ------------------------");
+            System.out.println(" ID: "+ID);
+            System.out.println("--------- <Input Name> ----------");
+            name = scan.next();
+        }
+        Shop shop = new Shop(name, ID, shopCategory, 0);
+        shop.setOwnerID(activeSeller.getID());
+        Utils.writeShopFile(shop);
+        shop.setCategory(shopCategory);
+        Utils.clearScreen();
+        System.out.println("----------- Create Shop ----------");
+        System.out.println(" Category: " + category);
+        System.out.println(" Name: "+name);
+        System.out.println(" ID: "+ID);
+        System.out.println("--- <Create shop successfully> ---");
+        System.out.println("---- <Press any key to exit> -----");
+        choice = scan.next();
+        displayAfterAuthMenu();
     }
 
     public void displayInformationMenu(){
-
+        Utils.clearScreen();
+        System.out.println("------------ <Seller> ------------");
+        System.out.println("ID: "+activeSeller.getID());
+        System.out.println("Name: "+activeSeller.getName());
+        System.out.println("Balance: "+activeSeller.getBalance());
+        System.out.println("Shops: ");
+        ArrayList<String> shopID = activeSeller.getShops();
+        ArrayList<Shop> shops = new ArrayList<>();
+        for(String id: shopID){
+            Shop shop = Utils.readShopFile(id);
+            shops.add(shop);
+        }
+        if(shops.isEmpty()){
+            System.out.println("<No shop found>");
+        }
+        else{
+            for(Shop shop: shops){
+                System.out.println("--- Name: "+shop.getName()+" ID: "+shop.getID()+" Category: "+Utils.enumToString(shop.getCategory()));
+            }
+        }
+        System.out.println("----- <Press any key to exit> ----");
+        String choice = scan.next();
+        displayAfterAuthMenu();
     }
 }
